# shobo

./: .gitignore  Dockerfile  INFO.md  README.md  checkcontainer.sh  docker-compose.yml  report.md
infra/params/: foxglove.params.yaml
ros2_ws/: yolov8n.json
ros2_ws/src/shobo_bringup/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/shobo_bringup/config/: detectors.yaml  ir_cam.yaml  rgb_cam.yaml
ros2_ws/src/shobo_bringup/config/camera_info/: ir_imx219.yaml  rgb_uvc.yaml
ros2_ws/src/shobo_bringup/launch/: perception.launch.py
ros2_ws/src/shobo_detectors/: CMakeLists.txt  package.xml
ros2_ws/src/shobo_detectors/include/shobo_detectors/: kernels.hpp
ros2_ws/src/shobo_detectors/include/shobo_detectors/shb/: trt_dla_utils.hpp
ros2_ws/src/shobo_detectors/src/: kernels.cu  trt_detector_node.cpp
ros2_ws/src/shobo_sensors/: CMakeLists.txt  package.xml
ros2_ws/src/shobo_sensors/src/: csi_cam_node.cpp  uvc_cam_node.cpp
tools/: Dockerfile.engine  build_engine.sh  cleanup_old.sh  ensure_trt_engine.sh  export_engine.py
