<?xml version="1.0"?>
<package format="3">
  <name>shobo_bringup</name>
  <version>0.1.0</version>
  <description>Launch/config package for Shobo.</description>

  <maintainer email="cosmin@example.com">Memetea Cosmin-Bogdan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
