<?xml version="1.0"?>
<package format="3">
  <name>shobo_detectors</name>
  <version>0.1.0</version>
  <description>TensorRT YOLO detector for Jetson</description>
  <maintainer email="you@example.com">Cosmin</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
</package>
