<?xml version="1.0"?>
<package format="3">
  <name>shobo_detectors</name>
  <version>0.1.0</version>
  <description>TensorRT-backed object detectors for Shobo.</description>

  <maintainer email="cosmin@example.com">Memetea Cosmin-Bogdan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>vision_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- TensorRT/CUDA are system deps; don't rosdep them to avoid conflicts -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
