<?xml version="1.0"?>
<package format="3">
  <name>shobo_sensors</name>
  <version>0.1.0</version>
  <description>Unified RGB/IR camera publishers</description>
  <maintainer email="you@example.com">Cosmin</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>camera_info_manager</depend>
</package>
